syntax = "proto3";

option go_package = "./internal/service;service";

package service;

// publish action, POST

message douyin_publish_action_request {
    string token = 1;
    bytes data = 2;
    string title = 3;
}

message douyin_publish_action_response {
    int32 status_code = 1;
    string status_msg = 2;
}

// GET list

message douyin_publish_list_request {
    int64 user_id = 1;
    string token = 2;
}

message douyin_publish_list_response {
    int32 status_code = 1;
    string status_msg = 2;
    Video video_list = 3;
}

message Video {
    int64 id = 1;
    User author = 2;
    string play_url = 3;
    string cover_url = 4;
    int64 favorite_count = 5;
    int64 comment_count = 6;
    bool is_favorite = 7;
    string title = 8;
}

message User {
    int64 id = 1;
    string name = 2;
    int64 follow_count = 3;
    int64 follower_count = 4;
    bool is_follow= 5;
}

service Publish {
    rpc Action (douyin_publish_action_request) returns (douyin_publish_action_response);
    rpc List (douyin_publish_list_request) returns (douyin_publish_list_response);
}